--- a/latex/src/introduction.tex
+++ b/latex/src/introduction.tex
@@ -1,4 +1,4 @@
 \section{Introduction}
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\lipsum~\cite{fooHumanISL1Ventricular2018}
+Yoo the heart is like, very nice \cite{fooHumanISL1Ventricular2018}.
